Add a method to get an unmodifiable view of a collection nbt (NBTArray, NBTList and NBTCompound) Add a method to get a list view of an NBTList Add a method to get a map view of an NBTCompound